AC_INIT(Makefile.am)
BITSTRING_MAJOR_VERSION=0
BITSTRING_MINOR_VERSION=1
BITSTRING_VERSION=$BITSTRING_MAJOR_VERSION.$BITSTRING_MINOR_VERSION
AC_SUBST(BITSTRING_MAJOR_VERSION)
AC_SUBST(BITSTRING_MINOR_VERSION)
AC_SUBST(BITSTRING_VERSION)

AM_INIT_AUTOMAKE(bitstring,$BITSTRING_VERSION)
AM_CONFIG_HEADER(src/bitstring/config.h)
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL
LT_REVISION=1
AC_SUBST(LT_REVISION)
AC_PROG_INSTALL
AC_OUTPUT(
          [Makefile
          doc/Makefile
          src/Makefile
          src/bitstring/Makefile
          tests/Makefile])
